[gd_scene load_steps=20 format=3 uid="uid://me2krwhpqgrn"]

[ext_resource type="PackedScene" uid="uid://dw5tfojduc0p8" path="res://rouge/Rogue.glb" id="1_qgo38"]
[ext_resource type="Script" uid="uid://bqpweyfrpe6bn" path="res://rouge/rogue.gd" id="2_hs352"]
[ext_resource type="PackedScene" uid="uid://ba5fay6ja3xen" path="res://projectile/projectile_launcher.tscn" id="3_sb5rj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lmthd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pq5jb"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sb5rj"]
animation = &"1H_Ranged_Reload"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nha0d"]
animation = &"1H_Ranged_Shoot"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eppps"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iyckh"]
animation = &"Walking_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qv84k"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cwi6l"]
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cbupo"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ulmp0"]
advance_mode = 2
advance_condition = &"is_shooting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_002pn"]
advance_mode = 2
advance_condition = &"is_shooting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nlw5l"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yvco7"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_71d2f"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sb5rj"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_shooting"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_f1ml0"]
states/1H_Ranged_Reload/node = SubResource("AnimationNodeAnimation_sb5rj")
states/1H_Ranged_Reload/position = Vector2(575.892, 75)
states/1H_Ranged_Shoot/node = SubResource("AnimationNodeAnimation_nha0d")
states/1H_Ranged_Shoot/position = Vector2(354.892, 75)
states/Idle/node = SubResource("AnimationNodeAnimation_eppps")
states/Idle/position = Vector2(354.892, 162)
states/Start/position = Vector2(133, 120)
states/Walking_B/node = SubResource("AnimationNodeAnimation_iyckh")
states/Walking_B/position = Vector2(575.892, 162)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_qv84k"), "Idle", "Walking_B", SubResource("AnimationNodeStateMachineTransition_cwi6l"), "Walking_B", "Idle", SubResource("AnimationNodeStateMachineTransition_cbupo"), "Idle", "1H_Ranged_Shoot", SubResource("AnimationNodeStateMachineTransition_ulmp0"), "Walking_B", "1H_Ranged_Shoot", SubResource("AnimationNodeStateMachineTransition_002pn"), "1H_Ranged_Shoot", "1H_Ranged_Reload", SubResource("AnimationNodeStateMachineTransition_nlw5l"), "1H_Ranged_Reload", "Idle", SubResource("AnimationNodeStateMachineTransition_yvco7"), "1H_Ranged_Reload", "Walking_B", SubResource("AnimationNodeStateMachineTransition_71d2f"), "1H_Ranged_Reload", "1H_Ranged_Shoot", SubResource("AnimationNodeStateMachineTransition_sb5rj")]
graph_offset = Vector2(-72.1078, 0)

[node name="Rogue" instance=ExtResource("1_qgo38")]
collision_layer = 9
script = ExtResource("2_hs352")
speed = 2.5

[node name="Rig" parent="." index="0"]
unique_name_in_owner = true

[node name="Knife_Offhand" parent="Rig/Skeleton3D" index="0"]
transform = Transform3D(-0.999999, -1.17465e-07, 2.60635e-08, -7.18757e-08, -5.30967e-07, 0.999999, -1.957e-07, 0.999999, 6.23449e-07, 0.883132, 1.04926, -1.63329e-05)
visible = false

[node name="1H_Crossbow" parent="Rig/Skeleton3D" index="1"]
transform = Transform3D(-4.5731e-07, 4.00596e-08, -0.999999, -0.999999, -4.96539e-07, 3.978e-07, -4.43668e-07, 0.999999, -3.07174e-08, -0.778504, 1.04926, -0.0103745)

[node name="2H_Crossbow" parent="Rig/Skeleton3D" index="2"]
transform = Transform3D(-4.5731e-07, 4.00596e-08, -0.999999, -0.999999, -4.96539e-07, 3.978e-07, -4.43668e-07, 0.999999, -3.07174e-08, -0.778504, 1.04926, -0.0103745)

[node name="Knife" parent="Rig/Skeleton3D" index="3"]
transform = Transform3D(0.999999, 1.88247e-07, -4.39071e-07, -3.79561e-07, -7.95385e-07, -0.999999, -1.1747e-07, 0.999999, -7.42514e-07, -0.883132, 1.04926, -1.60515e-05)
visible = false

[node name="Throwable" parent="Rig/Skeleton3D" index="4"]
transform = Transform3D(0.999999, 2.0298e-07, -4.52757e-07, -3.93247e-07, -6.76176e-07, -0.999999, -1.32203e-07, 0.999999, -6.23305e-07, -0.883132, 1.04926, 0.18023)
visible = false

[node name="Rogue_Cape" parent="Rig/Skeleton3D" index="5"]
transform = Transform3D(1, 1.25214e-21, 0, -1.25214e-21, 1, 0, 0, 0, 1, 0, 1.21587, 0)

[node name="AnimationPlayer" parent="." index="1"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01005, 0)
shape = SubResource("CapsuleShape3D_lmthd")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="3"]
path_desired_distance = 2.0
target_desired_distance = 2.0
path_postprocessing = 1
avoidance_enabled = true
avoidance_layers = 8
avoidance_mask = 8
debug_enabled = true

[node name="Area3D" type="Area3D" parent="." index="4"]
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0)
shape = SubResource("SphereShape3D_pq5jb")

[node name="ProjectileLauncher" parent="." index="5" instance=ExtResource("3_sb5rj")]
transform = Transform3D(-0.993171, -0.116671, 8.74228e-08, -0.116671, 0.993171, 0, -8.68257e-08, -1.01997e-08, -1, 0, 0.832371, 0)
automatic = false

[node name="AnimationTree" type="AnimationTree" parent="." index="6"]
tree_root = SubResource("AnimationNodeStateMachine_f1ml0")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/is_shooting = false
parameters/conditions/is_walking = false

[node name="IdleTimer" type="Timer" parent="." index="7"]
one_shot = true

[connection signal="navigation_finished" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_navigation_finished"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="Area3D" to="ProjectileLauncher" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_exited" from="Area3D" to="ProjectileLauncher" method="_on_area_3d_body_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
